# pydrawtogether

./: .gitignore  app.py  drawtogether.service  pyproject.toml
static/: script.js  style.css
templates/: base.html  canvas.html  draw.html  index.html
